Fixed gap in footer

--- a/src/Components/Navbar/navbar-bar.css
+++ b/src/Components/Navbar/navbar-bar.css
@@ -2,11 +2,14 @@
   width: 100%;
 }
 
-.navbar {
-  position: -webkit-sticky; /* For Safari */
+.sticky-header {
+  position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
-  z-index: 1020; /* Ensures navbar is above other content */
+  background-color: #333; /* Fallback color */
+  padding: 50px 0;
+  z-index: 1000; /* Ensure the header is above other content */
+  color: white;
 }
 
 .logo-wrapper {
