--- a/src/Components/Partials/Footer/footer.css
+++ b/src/Components/Partials/Footer/footer.css
@@ -1,5 +1,7 @@
 footer {
   width: 100%;
+  position: relative;
+  top: 13px;
 }
 
 .m-1 {
